# Delivery_Agent_OpenEnv

./: .gitignore  Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
agents/: baseline.py
env/: environment.py  grader.py  models.py  reward.py  utils.py
scripts/: openenv_validate.py  run_baseline.py
server/: app.py
tasks/: easy.py  hard.py  medium.py
web/: app.py
web/static/: script.js
web/templates/: index.html
